# Snake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  basic_allegro.cpp  gra.cpp  gra.hpp  meson.build
src/: CMakeLists.txt  app.cpp  app.hpp  appContext.cpp  appContext.h  audioSample.cpp  audioSample.h  basic_allegro.cpp  basic_allegro.h  basic_allegro.hpp  border.cpp  border.h  color.cpp  color.h  direction.cpp  direction.h  display.cpp  display.h  errMsg.cpp  errMsg.hpp  errorMsg.cpp  errorMsg.h  eventQueue.cpp  eventQueue.h  font.cpp  font.h  foodContext.cpp  foodContext.h  gameContext.cpp  gameContext.h  gameOverState.cpp  gameOverState.h  gameStateController.cpp  gameStateController.h  gra.cpp  gra.hpp  introState.cpp  introState.h  main.cpp  meson.build  (+38 more)
src/framework/: allegro_init.cpp  allegro_init.h  audioSample.cpp  audioSample.h  display.cpp  display.h  event.cpp  event.h  eventQueue.cpp  eventQueue.h  font.cpp  font.h  screenPainter.cpp  screenPainter.h  textWriter.cpp  textWriter.h  timer.cpp  timer.h
subprojects/: allegro-cpp
